[package]
name = "echo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4" }
axum-extra = { version = "0.10.1" }
base64 = { version = "0.22.1" }
form_urlencoded = { version = "1.2.1" }
percent-encoding = { version = "2.3.1" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["preserve_order"] }
tokio = { version = "1.47.0", features = ["full"] }
