[package]
name = "echo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7" }
axum-extra = { version = "0.12.2" }
base64 = { version = "0.22.1" }
form_urlencoded = { version = "1.2.2" }
percent-encoding = { version = "2.3.2" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
tokio = { version = "1.48.0", features = ["full"] }
